  . optimized access to global constants using values with pre-calculated
    hash_values from litersls table
  . optimized access to static properties using executor specialization.
    A constant class name may be used as a direct operand of ZEND_FETCH_*
    instruction without previous ZEND_FETCH_CLASS.
  . eliminated unnecessary iterations during request startup/shutdown
- Added concept of interned strings. All strings constants known at compile
  time are allocated in a single copy and never changed. (Dmitry)
- Added an optimization which saves memory and emalloc/efree calls for empty
  HashTables (Stas, Dmitry)

- Added array dereferencing support. (Felipe)
- Added DTrace support. (David Soria Parra)
- Added Tokyo Cabinet abstract DB support to ext/dba. (Michael Maclean)
- Added Jenkins's one-at-a-time hash support to ext/hash. (Martin Jansen)
- Added FNV-1 hash support to ext/hash. (Michael Maclean)
- Added ReflectionExtension::isTemporary() and
  ReflectionExtension::isPersistent(). (Johannes)
- Added ReflectionZendExtension class. (Johannes)
- Added ReflectionClass::isCloneable(). (Felipe)
- Added command line option --rz to CLI. (Johannes)
- Added closure $this support back. (Stas)
- Added SplObjectStorage::getHash() hook. (Etienne)
- Added JsonSerializable interface (Sara)
- Added JSON_BIGINT_AS_STRING, extended json_decode() sig with $options. (Sara)
- Added support for storing upload progress feedback in session data. (Arnaud)
- Added support for CURLOPT_MAX_RECV_SPEED_LARGE and CURLOPT_MAX_SEND_SPEED_LARGE.
  FR #51815. (Pierrick)
- Added iterator support in MySQLi. mysqli_result implements Traversable.
  (Andrey, Johannes)
- Added scalar typehinting. (Ilia, Derick)
- Added support for JSON_NUMERIC_CHECK option in json_encode() that converts 
  numeric strings to integers. (Ilia)
- Added support for object references in recursive serialize() calls. FR #36424.
  (Mike)
- Added Berkeley DB 5 support to the DBA extension (Johannes, Chris Jones)
